remove ssl, dockerize